--- a/filetorun.yaml
+++ b/filetorun.yaml
@@ -11,7 +11,7 @@ variables:
   location: 'AustraliaEast'
   templateFile: 'wincore.bicep'
   adminUsername: 'vmadmin1'
-  adminPassword: 'qwerty123'
+  adminPassword: '123qwerty123'
 pool:
   vmImage: $(vmImageName)
 
